# University

CSCI 511 - Database/Assignment 02/: Assignment 02.odt
CSCI 511 - Database/Assignment 04/: Sql.txt
CSCI 511 - Database/Assignment 1/: Text.odt
CSCI 511 - Database/Assignment 5/: a.out  assign5.tgz  databaseLoader.cc  databaseLoader.h  queryMaker.cc  queryMaker.h  query_return_status.txt  test.cc
CSCI 600 - Big Ideas In Computer Science/: Final Report.odt
CSCI 602 - Design of Algorithms/Assignment 06/: ex2.py
CSCI 602 - Design of Algorithms/Assignment01/: assign1.cc  assign1.h  assign1.out  makefile  simulation.csv  simulator.sh  turingSimulation.csv
CSCI 602 - Design of Algorithms/Assignment02/: Assignment2.odt
CSCI 602 - Design of Algorithms/Assignment03/: assignment3.doc  assignment3.odt
CSCI 602 - Design of Algorithms/Assignment07/: Assignment07.odt
CSCI 631 - Advanced Network Programming/assign1/: prog1cli.h
CSCI 631 - Advanced Network Programming/assign2/: prog2cli.h  wrap2cli.h  wrap2srv.c
CSCI 631 - Advanced Network Programming/assign3/: deleted.c  prog3cli.c  prog3cli.h  prog3srv.h  test.c  wrap3srv.c  wrap3srv.h
CSCI 631 - Advanced Network Programming/assign4/: Makefile  in-out.c  prog4cli.c  sum_my_number  wrap4cli.c
CSCI 631/assign4/: CMakeLists.txt  prog4cli.h  prog4srv.c  prog4srv.h  wrap4cli.h  wrap4srv.c  wrap4srv.h
CSCI 680 - Data Modeling and Visualization/: .~lock.Project form mil 2.docx#  Project form mil 2.docx  notes 2.odt  notes 3.odt  notes 4.odt  notes.odt
CSCI 680 - Java/: Abstract.docx  Abstract.odt  Header.txt
(+156 files in other folders)
